[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Fonts/PressStart2P/PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/Menu.gd" type="Script" id=2]
[ext_resource path="res://Game2D/Player/Player.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 2
outline_color = Color( 0.0941176, 0.384314, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 1
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_top = 64.0
margin_bottom = 112.0
custom_colors/font_color = Color( 0, 1, 0.0392157, 1 )
custom_fonts/font = SubResource( 1 )
text = "Snake 3D Godot"
align = 1
valign = 1
uppercase = true

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 458.0
margin_top = 303.0
margin_right = 822.0
margin_bottom = 401.0

[node name="PlayButtons" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 364.0
margin_bottom = 30.0

[node name="Play2DBTN" type="Button" parent="CenterContainer/VBoxContainer/PlayButtons"]
margin_right = 180.0
margin_bottom = 30.0
custom_colors/font_color_focus = Color( 0.541176, 0.541176, 0.541176, 1 )
custom_colors/font_color = Color( 0.0980392, 0.611765, 0.0941176, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.0862745, 0.439216, 0, 1 )
custom_fonts/font = SubResource( 2 )
button_mask = 7
text = "Play 2D"

[node name="Play3DBTN" type="Button" parent="CenterContainer/VBoxContainer/PlayButtons"]
margin_left = 184.0
margin_right = 364.0
margin_bottom = 30.0
custom_colors/font_color_focus = Color( 0.541176, 0.541176, 0.541176, 1 )
custom_colors/font_color = Color( 0.0980392, 0.611765, 0.0941176, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.0862745, 0.439216, 0, 1 )
custom_fonts/font = SubResource( 2 )
button_mask = 7
text = "Play 3D"

[node name="InstructionsBTN" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 364.0
margin_bottom = 64.0
custom_colors/font_color_focus = Color( 0.541176, 0.541176, 0.541176, 1 )
custom_colors/font_color = Color( 0.603922, 0.737255, 0.0470588, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.0862745, 0.439216, 0, 1 )
custom_fonts/font = SubResource( 2 )
button_mask = 7
text = "Instructions"

[node name="ExitBTN" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 364.0
margin_bottom = 98.0
custom_colors/font_color_focus = Color( 0.541176, 0.541176, 0.541176, 1 )
custom_colors/font_color = Color( 0.611765, 0.32549, 0.0941176, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.0862745, 0.439216, 0, 1 )
custom_fonts/font = SubResource( 2 )
button_mask = 7
text = "Exit"

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 272, 80 )

[connection signal="pressed" from="CenterContainer/VBoxContainer/PlayButtons/Play2DBTN" to="." method="_on_Play2DBTN_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/PlayButtons/Play3DBTN" to="." method="_on_Play3DBTN_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/InstructionsBTN" to="." method="_on_InstructionsBTN_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ExitBTN" to="." method="_on_ExitBTN_pressed"]
